--- a/src/pages/_vars.scss
+++ b/src/pages/_vars.scss
@@ -5,3 +5,4 @@ $font-sans: 'Open Sans';
 $light-blue: #EFF2F7; /* Светло-голубой */
 $dark-blue: #09293a; /* Темно-синий */
 $white: #FFFFFF; /* Белый */
+$orange: #f89735; /* Оранжевый */
