--- a/src/pages/_vars.scss
+++ b/src/pages/_vars.scss
@@ -6,3 +6,5 @@ $light-blue: #EFF2F7; /* Светло-голубой */
 $dark-blue: #09293a; /* Темно-синий */
 $white: #FFFFFF; /* Белый */
 $orange: #f89735; /* Оранжевый */
+$red: #ff0000; /* Красный */
+$dark: #000000; /* Черный */
