--- a/src/pages/_vars.scss
+++ b/src/pages/_vars.scss
@@ -8,3 +8,4 @@ $white: #FFFFFF; /* Белый */
 $orange: #f89735; /* Оранжевый */
 $red: #ff0000; /* Красный */
 $dark: #000000; /* Черный */
+$dark-grey: #909090; /* Темно-серый */
