--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -7,41 +7,32 @@
 }
 
 .popup__text {
-  margin: 0 30px 0 30px;
+  margin: 0 30px 0;
   width: 280px;
   background: $white;
-  /* Темно-серый */
   border: 0;
   border-bottom: 1px solid $dark-blue;
   box-sizing: border-box;
-  /* Text */
   padding: 0 0 6px;
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 16px;
-  /* Черный */
+  @include placeholder;
   color: $dark;
   outline: none;
 }
 .popup__text::-moz-placeholder {
-  /* Темно-серый */
-  color: #909090;
+  color: $dark-grey;
 }
 .popup__text::-webkit-input-placeholder {
-  /* Темно-серый */
-  color: #909090;
+  color: $dark-grey;
 }
 
 .popup__text-error {
-  margin: 6px 30px 0 30px;
-  font-family: 'Open Sans';
+  margin: 6px 30px 0;
+  font-family: $font-sans;
   font-style: normal;
   font-weight: normal;
   font-size: 8px;
   line-height: 8px;
-  color: #FF2D55;
+  color: $red;
   opacity: 0;
 }
 
@@ -50,13 +41,13 @@
 }
 
 .popup__input-title {
-  margin: 0 30px 6px 30px;
-  font-family: 'Open Sans';
+  margin: 0 30px 6px;
+  font-family: $font-sans;
   font-style: normal;
   font-weight: 600;
   font-size: 10px;
   line-height: 10px;
-  color: #909090;
+  color: $dark-grey;
   opacity: 0;
 }
 
