--- a/src/pages/profile/profile-date/profile-date.scss
+++ b/src/pages/profile/profile-date/profile-date.scss
@@ -40,7 +40,7 @@
   height: 28px;
   border: 0;
   border-radius: 50px;
-  background: #F89735;
+  background: $orange;
 }
 
 .profile__photo {
@@ -52,7 +52,7 @@
   height: 130px;
   border: 0;
   border-radius: 100px;
-  background: #EFF2F7;
+  background: $light-blue;
 }
 
 .profile_name {
