--- a/src/pages/_vars.scss
+++ b/src/pages/_vars.scss
@@ -2,10 +2,10 @@
 $font-sans: 'Open Sans';
 
 /* цвета */
-$light-blue: #EFF2F7; /* Светло-голубой */
+$light-blue: #eff2f7; /* Светло-голубой */
 $dark-blue: #09293a; /* Темно-синий */
-$white: #FFFFFF; /* Белый */
+$white: #fff; /* Белый */
 $orange: #f89735; /* Оранжевый */
-$red: #ff0000; /* Красный */
-$dark: #000000; /* Черный */
+$red: #f00; /* Красный */
+$dark: #000; /* Черный */
 $dark-grey: #909090; /* Темно-серый */
