--- a/src/pages/profile/password/password.scss
+++ b/src/pages/profile/password/password.scss
@@ -1,5 +1,5 @@
-@import "../../vars";
-@import "../../type";
+@import '../../vars';
+@import '../../type';
 @import '../../../components/profile-input/profile-input.scss';
 @import '../../../components/button/button.scss';
 
@@ -57,6 +57,7 @@
 
 .profile_name {
   @include heading-5;
+
   margin: 20px 0 20px;
   color: $dark-blue;
   text-align: center;
