--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -17,12 +17,13 @@
   width: 300px;
   height: 320px;
   background: $white;
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
 }
 
 .home__title {
   @include heading-4;
+
   color: $dark-blue;
   margin: 15px 0 10px;
   text-align: center;
@@ -37,5 +38,6 @@
 
 .home__link {
   @include text-link-1;
+
   color: $dark-blue;
 }
