--- a/src/components/profile-input/profile-input.scss
+++ b/src/components/profile-input/profile-input.scss
@@ -1,4 +1,11 @@
 @import "../../pages/vars";
+@import "../../pages/type";
+
+.profile__input {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
 
 .profile__input-title {
   margin: 0;
@@ -14,12 +21,6 @@
   position: absolute;
   left: 0;
   top: 0;
-}
-
-.profile__input {
-  position: relative;
-  display: flex;
-  flex-direction: column;
 }
 
 .profile__text {
@@ -59,6 +60,6 @@
   opacity: 0;
 }
 
-.profile__text-error_active {
+.popup__text-error_active {
   opacity: 1;
 }
