--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,12 +1,8 @@
 @import "../../pages/vars";
 @import "../../pages/type";
 
-.popup__btn-container {
-  display: flex;
-  flex-direction: column;
-}
-
 .popup__btn {
+  align-items: center;
   margin: 30px auto 0;
   padding: 16px 20px;
   border-width: 0;
