--- a/src/pages/home/signin/signin.scss
+++ b/src/pages/home/signin/signin.scss
@@ -37,6 +37,11 @@
   text-align: center;
 }
 
+.popup__btn-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .popup__btn {
   margin: 130px auto 0;
 }
