--- a/src/pages/_type.scss
+++ b/src/pages/_type.scss
@@ -69,3 +69,12 @@
   font-size: 14px;
   line-height: 16px;
 }
+
+/* Body 2 */
+@mixin body-2 {
+  font-family: $font-sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+}
