--- a/src/pages/_vars.scss
+++ b/src/pages/_vars.scss
@@ -9,3 +9,5 @@ $orange: #f89735; /* Оранжевый */
 $red: #f00; /* Красный */
 $dark: #000; /* Черный */
 $dark-grey: #909090; /* Темно-серый */
+$light-grey: #fbfbfb; /* Светло-серый */
+$grey: #d6d7d8; /* Серый */
