--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -11,7 +11,7 @@
 
 .chat-page__users-block {
   grid-area: users-block;
-  background: #fbfbfb; /* заменить на константу */
+  background: $light-grey;
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -38,14 +38,12 @@
   padding: 0;
   background: transparent;
   cursor: pointer;
-  /* вынести стиль */
-  font-family: 'Open Sans';
+  font-family: $font-sans;
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
   line-height: 12px;
-  /* Темно-серый */
-  color: #909090;
+  color: $dark-grey;
 }
 
 .btn-create-chat {
@@ -59,13 +57,11 @@
 .input-search {
   margin: 22px 10px 30px;
   border: 0;
-  /* Светло-голубой */
-  background: #eff2f7;
+  background: $light-blue;
   border-radius: 5px;
   outline: none;
   padding: 10px 0 10px 34px;
-  /* Заменить */
-  font-family: 'Open Sans';
+  font-family: $font-sans;
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
@@ -73,20 +69,19 @@
 }
 
 .input-search::-moz-placeholder {
-  /* Темно-серый */
-  color: #909090;
+  color: $dark-grey;
 }
+
 .input-search::-webkit-input-placeholder {
-  /* Темно-серый */
-  color: #909090;
+  color: $dark-grey;
 }
 
 .chat-separator {
   margin: 0 10px;
   width: auto;
   border: none;
-  background-color: #d6d7d8;
-  color: #d6d7d8;
+  background-color: $grey;
+  color: $grey;
   height: 1px;
 }
 
@@ -106,8 +101,7 @@
   width: 47px;
   height: 47px;
   border-radius: 50%;
-  /* Серый */
-  background: #d6d7d8;
+  background: $grey;
 }
 
 .user-card__name {
@@ -115,14 +109,12 @@
   align-self: start;
   justify-self: start;
   margin: 0;
-  /* Card title */
-  font-family: 'Open Sans';
+  font-family: $font-sans;
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
   line-height: 13px;
-  /* Темно-синий */
-  color: #09293a;
+  color: $dark-blue;
 }
 
 .user-card__last-msg {
@@ -130,24 +122,22 @@
   margin: 4px 0 0;
   align-self: start;
   justify-self: start;
-  font-family: 'Open Sans';
+  font-family: $font-sans;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
   line-height: 15px;
-  /* Темно-серый */
-  color: #909090;
+  color: $dark-grey;
 }
 
 .user-card__you-msg {
   margin: 0;
-  font-family: 'Open Sans';
+  font-family: $font-sans;
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
   line-height: 15px;
-  /* Темно-синий */
-  color: #09293a;
+  color: $dark-blue;
 }
 
 .user-card__msg-time {
@@ -155,14 +145,13 @@
   margin: 0;
   align-self: start;
   justify-self: end;
-  font-family: 'Open Sans';
+  font-family: $font-sans;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
   line-height: 12px;
   text-align: right;
-  /* Темно-серый */
-  color: #909090;
+  color: $font-sans;
 }
 
 .user-card__msg-num {
@@ -174,17 +163,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* Желтый */
-  background: #f89735;
+  background: $orange;
   align-self: end;
   justify-self: end;
-  font-family: 'Open Sans';
+  font-family: $font-sans;
   font-style: normal;
   font-weight: normal;
   font-size: 11px;
   line-height: 12px;
-  /* Белый */
-  color: #ffffff;
+  color: $white;
 }
 
 .chat-container {
@@ -241,20 +228,18 @@
 .chat-user-avatar {
   width: 34px;
   height: 34px;
-  /* Серый */
-  background: #d6d7d8;
+  background: $grey;
   border-radius: 50%;
 }
 
 .chat-user-name {
   margin: 0 10px;
-  /* Card title */
-  font-family: 'Open Sans';
+  font-family: $font-sans;
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
   line-height: 13px;
-  color: #1e1e1e;
+  color: $dark;
 }
 
 .header-menu-btn {
@@ -264,27 +249,21 @@
   padding: 0;
   background: transparent;
   cursor: pointer;
-  /* вынести стиль */
-  font-family: 'Open Sans';
+  font-family: $font-sans;
   font-style: normal;
   font-weight: 600;
   font-size: 25px;
   line-height: 25px;
-  /* Темно-серый */
-  color: #909090;
+  color: $dark-grey;
 }
 
 .chat-date {
   margin: 20px 0;
   text-align: center;
-  /* Caption */
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 16px;
-  /* Темно-серый */
-  color: #909090;
+
+  @include caption;
+
+  color: $dark-grey;
 }
 
 .message-left {
@@ -298,30 +277,21 @@
   margin: 0;
   max-width: 600px;
   padding: 24px 20px;
-  /* Светло-голубой */
-  background: #eff2f7;
-  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.05);
+  background: $light-blue;
+  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.05);
   border-radius: 20px;
-  /* Caption */
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 16px;
-  /* Черный */
-  color: #000000;
+
+  @include caption;
+
+  color: $dark;
 }
 
 .message-left__time {
   margin-top: 11px;
-  /* Body 2 */
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
-  /* Темно-серый */
-  color: #909090;
+
+  @include body-2;
+
+  color: $dark-grey;
 }
 
 .message-right {
@@ -335,33 +305,23 @@
   margin: 0;
   max-width: 600px;
   padding: 24px 20px;
-  /* Белый */
-  background: #ffffff;
-  /* Светло-голубой */
-  border: 1px solid #eff2f7;
+  background: $white;
+  border: 1px solid $light-blue;
   box-sizing: border-box;
-  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.05);
   border-radius: 20px;
-  /* Caption */
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 16px;
-  /* Черный */
-  color: #000000;
+
+  @include caption;
+
+  color: $dark;
 }
 
 .message-right__time {
   margin-top: 11px;
-  /* Body 2 */
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
-  /* Темно-серый */
-  color: #909090;
+
+  @include body-2;
+
+  color: $dark-grey;
 }
 
 .send-msg-element {
@@ -381,12 +341,12 @@
   border: 0;
   border-radius: 50%;
   background: transparent;
-  font-family: 'Open Sans';
+  font-family: $font-sans;
   font-style: normal;
   font-weight: 600;
   font-size: 28px;
   line-height: 28px;
-  color: #09293a;
+  color: $dark-blue;
   cursor: pointer;
 }
 
@@ -397,12 +357,12 @@
   grid-area: msg-btn;
   border: 0;
   border-radius: 50%;
-  background: #f89735;
-  font-family: 'Open Sans';
+  background: $orange;
+  font-family: $font-sans;
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
   line-height: 16px;
-  color: #ffffff;
+  color: $white;
   cursor: pointer;
 }
