--- a/src/pages/home/signup/signup.scss
+++ b/src/pages/home/signup/signup.scss
@@ -1,9 +1,9 @@
-@import "../../vars";
-@import "../../type";
+@import '../../vars';
+@import '../../type';
 @import '../../../components/button/button.scss';
 @import '../../../components/input/input.scss';
 
-.signin {
+.signup {
   background: $light-blue;
   display: flex;
   flex-direction: column;
@@ -11,7 +11,7 @@
   height: 100vh;
 }
 
-.signin__modal {
+.signup__modal {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -22,7 +22,7 @@
   border-radius: 8px;
 }
 
-.signin__title {
+.signup__title {
   @include heading-4;
 
   margin: 20px 0 20px;
@@ -30,7 +30,7 @@
   text-align: center;
 }
 
-.signin__link {
+.signup__link {
   color: $dark-blue;
 
   @include text-link-1;
