--- a/src/components/profile-input/profile-input.scss
+++ b/src/components/profile-input/profile-input.scss
@@ -1,5 +1,5 @@
-@import "../../pages/vars";
-@import "../../pages/type";
+@import '../../pages/vars';
+@import '../../pages/type';
 
 .profile__input {
   position: relative;
@@ -50,7 +50,7 @@
 }
 
 .profile__text-error {
-  margin: 0 30px 0;
+  margin: 0;
   font-family: $font-sans;
   font-style: normal;
   font-weight: normal;
