--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,5 +1,5 @@
-@import "../vars";
-@import "../type";
+@import '../vars';
+@import '../type';
 @import '../../components/profile-input/profile-input.scss';
 @import '../../components/button/button.scss';
 
@@ -35,7 +35,7 @@
   background: $white;
 }
 
-.profile__photo {
+.profile__avatar {
   align-self: center;
 }
 
@@ -44,17 +44,115 @@
   height: 130px;
   border: 0;
   border-radius: 100px;
-  background: $light-blue;
+  background: #eff2f7;
 }
 
 .profile_name {
-  @include heading-5;
-
+  margin: 0;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
   margin: 20px 0 20px;
-  color: $dark-blue;
+  color: #09293a;
   text-align: center;
+}
+
+.profile__avatar-container {
+  position: relative;
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.profile__avatar-container:hover .profile__avatar-overlay {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.profile__avatar-container:hover .profile__patchavatar-btn {
+  visibility: visible;
+}
+
+.profile__avatar-img {
+  grid-area: avatar;
+  height: 100%;
+  width: 100%;
+}
+
+.profile__avatar-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* выравниваем кнопку по центру оверлея */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .profile__change {
   margin-top: 50px;
+}
+
+.popup {
+  margin: 0;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+
+  /* закрытие попапа */
+  visibility: hidden;
+  opacity: 0;
+}
+
+.popup_opened {
+  /* открытие попапа */
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup-form {
+  background: #eff2f7; /* Светло-голубой */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+}
+
+.popup-form__modal {
+  margin: 0 auto;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 340px;
+  background: #fff; /* Белый */
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+}
+
+.popup-form__title {
+  /* Heading 4 */
+  margin: 0;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 24px;
+
+  margin: 20px 0 20px;
+  color: #09293a; /* Темно-синий */
+  text-align: center;
 }
