--- a/src/pages/chat/components/btn-menu-chat/btn-menu-chat.scss
+++ b/src/pages/chat/components/btn-menu-chat/btn-menu-chat.scss
@@ -1,5 +1,5 @@
-@import '../../pages/vars';
-@import '../../pages/type';
+@import '../../../../pages/vars';
+@import '../../../../pages/type';
 
 .btn-menu-chat {
   border: 0;
