--- a/src/pages/profile/password/password.scss
+++ b/src/pages/profile/password/password.scss
@@ -43,7 +43,7 @@
   background: $orange;
 }
 
-.profile__photo {
+.profile__avatar {
   align-self: center;
 }
 
@@ -61,6 +61,28 @@
   margin: 20px 0 20px;
   color: $dark-blue;
   text-align: center;
+}
+
+.profile__avatar-container {
+  position: relative;
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.profile__avatar-container:hover .profile__avatar-overlay {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.profile__avatar-container:hover .profile__patchavatar-btn {
+  visibility: visible;
+}
+
+.profile__avatar-img {
+  grid-area: avatar;
+  height: 100%;
+  width: 100%;
 }
 
 .profile__change {
