--- a/src/pages/chat/components/chat-card/chat-card.scss
+++ b/src/pages/chat/components/chat-card/chat-card.scss
@@ -1,5 +1,5 @@
-@import '../../pages/vars';
-@import '../../pages/type';
+@import '../../../../pages/vars';
+@import '../../../../pages/type';
 
 .chat-user-card {
   margin: 12px 10px;
