--- a/src/pages/chat/components/send-msg-input/send-msg-input.scss
+++ b/src/pages/chat/components/send-msg-input/send-msg-input.scss
@@ -1,5 +1,5 @@
-@import "../../pages/vars";
-@import "../../pages/type";
+@import "../../../../pages/vars";
+@import "../../../../pages/type";
 
 .send-msg-input-block {
   display: flex;
