--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -44,18 +44,14 @@
   height: 130px;
   border: 0;
   border-radius: 100px;
-  background: #eff2f7;
+  background: $light-blue;
 }
 
 .profile_name {
-  margin: 0;
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 24px;
+  @include heading-5;
+
   margin: 20px 0 20px;
-  color: #09293a;
+  color: $dark-blue;
   text-align: center;
 }
 
