--- a/src/pages/chat/components/chat-card/chat-card.scss
+++ b/src/pages/chat/components/chat-card/chat-card.scss
@@ -14,10 +14,39 @@
 
 .user-card__avatar {
   grid-area: avatar;
+  position: relative;
   width: 47px;
   height: 47px;
   border-radius: 50%;
+  overflow: hidden;
   background: $grey;
+}
+
+.user-card__avatar:hover .user-card__avatar-overlay {
+  background: $dark-grey;
+}
+
+.user-card__avatar:hover .chat-delete-btn {
+  visibility: visible;
+}
+
+.user-card__avatar-img {
+  grid-area: avatar;
+  height: 100%;
+  width: 100%;
+}
+
+.user-card__avatar-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* выравниваем кнопку по центру оверлея */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .user-card__name {
