--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -64,7 +64,6 @@
   height: 1px;
 }
 
-
 .chat-container {
   height: 100%;
   display: grid;
@@ -84,6 +83,11 @@
 .chat-pablic-area {
   grid-area: pablic-area;
   align-self: end;
+}
+
+.chat-pablic-area_center {
+  grid-area: pablic-area;
+  align-self: center;
 }
 
 .chat-send-msg {
@@ -157,63 +161,6 @@
   color: $dark-grey;
 }
 
-.message-left {
-  margin: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.message-left__text {
-  margin: 0;
-  max-width: 600px;
-  padding: 24px 20px;
-  background: $light-blue;
-  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.05);
-  border-radius: 20px;
-
-  @include caption;
-
-  color: $dark;
-}
-
-.message-left__time {
-  margin-top: 11px;
-
-  @include body-2;
-
-  color: $dark-grey;
-}
-
-.message-right {
-  margin: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.message-right__text {
-  margin: 0;
-  max-width: 600px;
-  padding: 24px 20px;
-  background: $white;
-  border: 1px solid $light-blue;
-  box-sizing: border-box;
-  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.05);
-  border-radius: 20px;
-
-  @include caption;
-
-  color: $dark;
-}
-
-.message-right__time {
-  margin-top: 11px;
-
-  @include body-2;
-
-  color: $dark-grey;
-}
 
 .send-msg-element {
   margin: 10px 10px 0;
