chat add user btn

--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -140,16 +140,16 @@
 .header-menu-btn {
   width: 25px;
   height: 25px;
+  background: transparent;
+  background-image: url(../../../static/img/add_person.svg);
   border: 0;
   padding: 0;
-  background: transparent;
   cursor: pointer;
   font-family: $font-sans;
   font-style: normal;
   font-weight: 600;
   font-size: 25px;
   line-height: 25px;
-  color: $dark-grey;
 }
 
 .chat-date {
@@ -160,7 +160,6 @@
 
   color: $dark-grey;
 }
-
 
 .send-msg-element {
   margin: 10px 10px 0;
