--- a/src/pages/chat/components/add-user-button/add-user-button.scss
+++ b/src/pages/chat/components/add-user-button/add-user-button.scss
@@ -2,16 +2,12 @@
 @import '../../../../pages/type';
 
 .header-menu-btn {
-  width: 25px;
-  height: 25px;
+  margin: 15px 0;
+  width: 24px;
+  height: 24px;
   background: transparent;
   background-image: url(../../../../../static/img/add_person.svg);
   border: 0;
   padding: 0;
   cursor: pointer;
-  font-family: $font-sans;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 25px;
-  line-height: 25px;
 }
