--- a/src/pages/chat/components/chat-delete-btn/chat-delete-btn.scss
+++ b/src/pages/chat/components/chat-delete-btn/chat-delete-btn.scss
@@ -5,7 +5,7 @@
   padding: 0;
   width: 26px;
   height: 26px;
-  font-family: 'Open Sans';
+  font-family: $font-sans;
   font-style: normal;
   font-weight: 600;
   font-size: 24px;
