--- a/src/pages/profile/profile-date/profile-date.scss
+++ b/src/pages/profile/profile-date/profile-date.scss
@@ -1,5 +1,5 @@
-@import "../../vars";
-@import "../../type";
+@import '../../vars';
+@import '../../type';
 @import '../../../components/profile-input/profile-input.scss';
 @import '../../../components/button/button.scss';
 
@@ -63,6 +63,18 @@
   overflow: hidden;
 }
 
+.profile__avatar-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .profile__avatar-container:hover .profile__avatar-overlay {
   background: rgba(0, 0, 0, 0.5);
 }
@@ -76,19 +88,6 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
-}
-
-.profile__avatar-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  /* выравниваем кнопку по центру оверлея */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .profile__change {
@@ -108,20 +107,17 @@
   justify-content: center;
   align-items: center;
   z-index: 2;
-
-  /* закрытие попапа */
   visibility: hidden;
   opacity: 0;
 }
 
 .popup_opened {
-  /* открытие попапа */
   visibility: visible;
   opacity: 1;
 }
 
 .popup-form {
-  background: #eff2f7; /* Светло-голубой */
+  background: $light-blue;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -135,22 +131,15 @@
   flex-direction: column;
   justify-content: flex-start;
   width: 340px;
-  background: #fff; /* Белый */
+  background: $white;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
 }
 
 .popup-form__title {
-  /* Heading 4 */
-  margin: 0;
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 24px;
+  @include heading-4;
 
   margin: 20px 0 20px;
-  color: #09293a; /* Темно-синий */
+  color: $dark-blue;
   text-align: center;
 }
-
